criado migration de especificacao
